# databricks-agent-builder

./: .env.template  .gitignore  BUILD_LOG.md  DESIGN_NOTES.md  GUIDELINES.md
.cursor/skills/databricks-env-host-pat/: SKILL.md  connection-test.md  scripts.md
backend/: index.js  package-lock.json  package.json
backend/__tests__/: api.test.js
backend/lib/: databricks-client.js
backend/python-service/: app.py  pyproject.toml
backend/scripts/: test-client.js
doc/: BUILD_LOG.md  DATABRICKS_AUTH_PLAN.md  DESIGN_NOTES.md  DROPDOWN_DESIGN.md  GENIE_ROOM_FROM_PROJECT.md  GUIDELINES.md  HANDOFF.md  PLAN_PYTHON_SERVICE_AND_GENIE_DROP.md  PROJECT_CREATE_PLAN.md  STACK.md  agent_builder.plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/__tests__/: api.test.ts
frontend/src/: App.tsx
frontend/src/blockDefinitions/: index.ts  types.ts
frontend/src/blockDefinitions/definitions/: agent.ts  apps.ts  genie.ts  knowledgeAssistant.ts  lakebaseMemory.ts  mcp.ts  multiAgentSupervisor.ts  vectorSearch.ts
frontend/src/components/: BlockSettingsModal.tsx  FlowCanvas.tsx  ProjectMenu.tsx  SettingsPanel.tsx  Sidebar.tsx
frontend/src/components/nodes/: BlockNode.tsx
frontend/src/contexts/: NodeSettingsContext.tsx
frontend/src/types/: databricks.ts
playground/: get_genie.py  list-schemas.sh
sandbox/: API_FINDINGS.md  README.md  list-uc-catalogs.sh
scripts/: start.sh
