[project]
name = "databricks-gateway"
version = "0.1.0"
description = "Long-running Python sidecar for Genie/Databricks (AgentBricksManager)"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "databricks-tools-core",
]

[tool.uv.sources]
databricks-tools-core = { path = "../../databricks-tools-core", editable = true }

[tool.uv]
dev-dependencies = []
